Use after_request
